feat(billing): add onboarding flow enhancements with resume and resend verification endpoints